# robertoEnergyinfo

./: README.md
ConciliacaoBancaria/: ConciliacaoBancaria.dproj  ConciliacaoBancaria.dproj.local  ConciliacaoBancaria.dsk  ConciliacaoBancaria.identcache  ConciliacaoBancaria.res  ConciliacaoBancaria.stat  ConciliacaoBancaria.~dsk  uEnergyInfo.dfm  uEnergyInfo.pas  uOxymed.pas  uOxymed.pas - erro  uPrincipal.dfm  uPrincipal.pas
ConciliacaoBancaria - Copia/: ConciliacaoBancaria.dpr  ConciliacaoBancaria.res  ConciliacaoBancaria.stat  uOxymed.pas  uPrincipal.pas
ConciliacaoBancaria - Copia (2)/: ConciliacaoBancaria.dsk  uEnergyInform.dfm  uEnergyInform.pas  uOxymed.pas
ConciliacaoBancariaOLD/: ConciliacaoBancaria.stat  Principal.dfm  uEnergyInfo.pas  uPrincipal.pas
ConciliacaoBancariaXE6/: ConciliacaoBancaria.dproj  ConciliacaoBancaria.dproj.local  ConciliacaoBancaria.dsk  uOxymed.pas  (+5 more)
ConciliacaoBancariaXE6 - Copia/: ConciliacaoBancaria.dproj  ConciliacaoBancaria.dproj.local  ConciliacaoBancaria.dsk  ConciliacaoBancaria.identcache  ConciliacaoBancaria.stat  ConciliacaoBancaria.~dsk  uOxymed.pas  uPrincipal.pas
wander/code/src/plt_cv/: CMakeLists.txt  package.xml  setup.py
wander/code/src/plt_cv/launch/: img_preprocessing.launch  line_tracking.launch
wander/code/src/plt_cv/src/plt_cv/: edge.py  filter_noise.py  line_detector.py  utils.py
wander/code/src/plt_resources/: CMakeLists.txt  package.xml
wander/code/src/plt_resources/bagfiles/: README.md
wander/code/src/plt_resources/launch/: record_log.launch  rosbag_play.launch
wander/code/src/plt_resources/mission/mission-file/: mZ15.plan  mZ20.plan
wander/code/src/plt_resources/mission/parameters/: typhoon-parameters.params
wander/code/src/plt_scripts/: CMakeLists.txt  package.xml
wander/code/src/plt_scripts/launch/: all.launch  mission_record.launch  rqt_plot.launch
(+2625 files in other folders)
