<?xml version="1.0"?>
<package format="2">
  <name>plt_scripts</name>
  <version>0.0.0</version>
  <description>The plt_scripts package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
